--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="container">
-    <h1>Click The Menu</h1>
-    <p>Be Amazed</p>
+    <h1>White Hat Web Development</h1>
+    <p>Sleek. Modern. Professional.</p>
     <!-- Everything below this is part of the menu-->
   </div>
   <div class="button_container" id="toggle">
@@ -24,13 +24,13 @@
     <nav class="overlay-menu">
       <ul>
         <li>
-          <a href="#">Home</a>
+          <a href="#home">Home</a>
         </li>
         <li>
-          <a href="#">About</a>
+          <a href="#about">About</a>
         </li>
         <li>
-          <a href="#">Work</a>
+          <a href="#work">Work</a>
         </li>
         <li>
           <a href="#">Contact</a>
@@ -39,11 +39,19 @@
     </nav>
   </div>
 
+  <div class="main_content">
+    <div id="home">home</div>
+    <div id="about">about</div>
+    <div id="work">work</div>
+    <div id="contact">contact</div>
+  </div>
+
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="js/nav.js"></script>
-    
+
 </body>
 
 </html>
