--- a/index.html
+++ b/index.html
@@ -10,34 +10,38 @@
 </head>
 
 <body>
-  <div class="container">
-    <h1>White Hat Web Development</h1>
-    <p>Sleek. Modern. Professional.</p>
-    <!-- Everything below this is part of the menu-->
+  <div class="bg_video">
+
+    <div class="container">
+      <h1>White Hat Web Development</h1>
+      <p>Sleek. Modern. Professional.</p>
+      <!-- Everything below this is part of the menu-->
+    </div>
+    <div class="button_container" id="toggle">
+      <span class="top"></span>
+      <span class="middle"></span>
+      <span class="bottom"></span>
+    </div>
+    <div class="overlay" id="overlay">
+      <nav class="overlay-menu">
+        <ul>
+          <li>
+            <a href="#home">Home</a>
+          </li>
+          <li>
+            <a href="#about">About</a>
+          </li>
+          <li>
+            <a href="#work">Work</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
-  <div class="button_container" id="toggle">
-    <span class="top"></span>
-    <span class="middle"></span>
-    <span class="bottom"></span>
-  </div>
-  <div class="overlay" id="overlay">
-    <nav class="overlay-menu">
-      <ul>
-        <li>
-          <a href="#home">Home</a>
-        </li>
-        <li>
-          <a href="#about">About</a>
-        </li>
-        <li>
-          <a href="#work">Work</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
+
 
   <div class="main_content">
     <div id="home">home</div>
