added video back

--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 
 <body>
-  <div class="bg_video">
-
+  <div class="bg">
+    <div class="bg__video">
+      <video class="bg-video__content" autoplay muted loop>
+        <source src="img/busy-city.mp4" type="video/mp4">
+        <source src="img/busy-city.webm" type="video/webm"> Your browser is not supported!
+      </video>
+    </div>
     <div class="container">
       <h1>White Hat Web Development</h1>
       <p>Sleek. Modern. Professional.</p>
+      <a href="#about" class="down_button">&darr;</a>
       <!-- Everything below this is part of the menu-->
     </div>
     <div class="button_container" id="toggle">
