--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <a href="#home">Home</a>
           </li>
           <li>
-            <a href="#landing">About</a>
+            <a href="#about">About</a>
           </li>
           <li>
-            <a href="#work">Work</a>
+            <a href="#about">Work</a>
           </li>
           <li>
             <a href="#">Contact</a>
@@ -56,7 +56,6 @@
 
   <!-- Space after video -->
   <div class="after_bg">
-    <div class="fade_black_grey"></div>
   </div>
 
   <!-- Main content section -->
@@ -77,11 +76,15 @@
           <img class="small_hat" src="img/small-hat.png" alt="">
           <p class="small_center_text">White Hat Web Development</p>
         </div>
-        <img src="img/Image_2.jpg" alt="" class="desktop landing_section--img mirror">
+        <img src="img/image_2.jpg" alt="" class="desktop landing_section--img mirror">
         <img src="img/image_1_bottom_half.jpg" alt="" class="mobile landing_section--img">
       </div>
     </div>
 
+    <!-- Space after video -->
+    <div class="after_landing">
+      <div class="fade_black_grey_up"></div>
+    </div>
 
     <div class="about_section">
       <div id="about">about</div>
