fixed spelling error in image names

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="bg" id="home">
     <div class="bg__video">
       <video class="bg-video__content" autoplay muted loop>
-        <source src="img/busy-city.mp4" type="video/mp4">
-        <source src="img/busy-city.webm" type="video/webm">
+        <source src="img/Busy-City.mp4" type="video/mp4">
+        <source src="img/Busy-City.webm" type="video/webm">
         <img src="img/Busy-City.jpg" alt="" title="Your browser is not supported!">
       </video>
     </div>
@@ -76,7 +76,7 @@
           <img class="small_hat" src="img/small-hat.png" alt="">
           <p class="small_center_text">White Hat Web Development</p>
         </div>
-        <img src="img/image_2.jpg" alt="" class="desktop landing_section--img mirror">
+        <img src="img/Image_2.jpg" alt="" class="desktop landing_section--img mirror">
         <img src="img/image_1_bottom_half.jpg" alt="" class="mobile landing_section--img">
       </div>
     </div>
