fixed more errors:

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="landing_section" id="landing">
       <div class="landing_section--row">
         <!-- <img src="img/Image_1.jpg" alt="" class="desktop landing_section--img"> -->
-        <img src="img/Image_2.jpg" alt="" class="desktop landing_section--img">
+        <img src="img/image_2.jpg" alt="" class="desktop landing_section--img">
         <img src="img/image_1_top_half.jpg" alt="" class="mobile landing_section--img">
         <div class="landing_section--row-middle_content">
           <h1>The time is now</h1>
@@ -76,7 +76,7 @@
           <img class="small_hat" src="img/small-hat.png" alt="">
           <p class="small_center_text">White Hat Web Development</p>
         </div>
-        <img src="img/Image_2.jpg" alt="" class="desktop landing_section--img mirror">
+        <img src="img/image_2.jpg" alt="" class="desktop landing_section--img mirror">
         <img src="img/image_1_bottom_half.jpg" alt="" class="mobile landing_section--img">
       </div>
     </div>
