added about start

--- a/index.html
+++ b/index.html
@@ -86,10 +86,20 @@
       <div class="fade_black_grey_up"></div>
     </div>
 
-    <div class="about_section">
-      <div id="about">about</div>
+    <!-- Start about section -->
+      <div class="about_section" id="about">
+        <h1>The White Hat Team</h1>
+        <div class="about_section__row">
+          <div class="about_section__row--max">
+            <img src="img/max_head.jpg" alt=""> Maxwell Stephens
+          </div>
+          <div class="about_section__row--booke">
+            <img src="img/booke_head.jpg" alt=""> Rebeccah Zehall
+          </div>
+        </div>
     </div>
 
+    <!-- End about section  -->
 
     <div class="work_section">
       <div id="work">work</div>
