nearly finished about page

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
           </ul>
           <img class="small_hat" src="img/small-hat.png" alt="">
           <p class="small_center_text">White Hat Web Development</p>
+          <div class="centered" onclick="down_arrow2()">
+                <p class="landing_button">Meet The Team</p>
+          </div>
         </div>
         <img src="img/image_2.jpg" alt="" class="desktop landing_section--img mirror">
         <img src="img/image_1_bottom_half.jpg" alt="" class="mobile landing_section--img">
