--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <p class="about_section__row--max-text_container-big_name">Maxwell Stephens</p>
                 <p class="about_section__row--max-text_container-big_name--sub">Lead Developer</p>
                 <p class="about_section__row--max-text_container--icon"><i class="fa fa-laptop" aria-hidden="true"></i></p>
-                <p class="about_section__row--max-text_container-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, recusandae itaque et voluptatum ut qui dolorum iste dicta esse velit?</p>
+                <p class="about_section__row--max-text_container-description">Fueled by an insatiable passion for programming, Max enjoys learning the latest web development techniques and technologies to keep his sites on the cutting edge. An avid musician with a love for nature, Max puts his artistic spirit into each page he codes.</p>
             </div>
           </div>
         </div>
@@ -115,9 +115,9 @@
               
             <div class="about_section__row--booke-text_container">
                 <p class="about_section__row--booke-text_container-big_name">Rebeccah Zehall</p>
-                <p class="about_section__row--booke-text_container-big_name--sub">Lead Developer</p>
-                <p class="about_section__row--booke-text_container--icon"><i class="fa fa-laptop" aria-hidden="true"></i></p>
-                <p class="about_section__row--booke-text_container-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, recusandae itaque et voluptatum ut qui dolorum iste dicta esse velit?</p>
+                <p class="about_section__row--booke-text_container-big_name--sub">Lead Designer</p>
+                <p class="about_section__row--booke-text_container--icon"><i class="fa fa-paint-brush" aria-hidden="true"></i></p>
+                <p class="about_section__row--booke-text_container-description">A keen artistic vision is Rebeccah's greatest asset. She enjoys working with clients to create inspired designs that draw the viewer in emotionally and spiritually.</p>
             </div>
             
           </div>
@@ -128,8 +128,12 @@
 
     <!-- End about section  -->
 
-    <div class="work_section">
-      <div id="work">work</div>
+    <!-- Space after video -->
+  <div class="after_bg">
+    </div>
+
+    <div class="work_section" id="work">
+
     </div>
 
 
