went back to old nav

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 <body>
   <!-- Start nav and bg -->
+  <!-- Navigation -->
+
+
+
   <div class="bg" id="home">
     <div class="bg__video">
       <video class="bg-video__content" autoplay muted loop>
@@ -26,8 +30,10 @@
       <a onclick="down_arrow()" class="down_button" id="down_arrow">
         <i class="fa fa-arrow-circle-down"></i>
       </a>
-      <!-- Everything below this is part of the menu-->
     </div>
+      
+     
+      <!-- Everything below this is part of the menu-->
     <div class="button_container" id="toggle">
       <span class="top"></span>
       <span class="middle"></span>
@@ -43,7 +49,7 @@
             <a href="#about">About</a>
           </li>
           <li>
-            <a href="#about">Work</a>
+            <a href="#work">Work</a>
           </li>
           <li>
             <a href="#">Contact</a>
@@ -51,8 +57,8 @@
         </ul>
       </nav>
     </div>
-  </div>
-  <!-- End nav and bg -->
+  </div> 
+  <!-- End nav and bg
 
   <!-- Space after video -->
   <div class="after_bg">
@@ -125,6 +131,9 @@
             </div>
         </div>
     </div>
+    <div class="centered" onclick="down_arrow3()">
+        <p class="landing_button">View Portfolio</p>
+  </div>
 
     <!-- End about section  -->
 
