--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
       </nav>
     </div>
   </div> 
-  <!-- End nav and bg
+  <!-- End nav and bg -->
 
   <!-- Space after video -->
   <div class="after_bg">
@@ -153,7 +153,9 @@
           This is column 1
         </div>
         <div class="col span_1_of_2">
-          <div class="appalachian_blurb"></div>
+          <div class="appalachian_blurb">
+            
+          </div>
         </div>
       </div>
     </div>
