--- a/html/index.html
+++ b/html/index.html
@@ -150,11 +150,11 @@
       <div class="contact_section--header">Showcase</div>
       <div class="section group">
         <div class="col span_1_of_2">
-          This is column 1
+          <img src="img/appalachian.png" height="450px" width="600px" alt="">
         </div>
         <div class="col span_1_of_2">
           <div class="appalachian_blurb">
-            
+            Appalachian Counseling
           </div>
         </div>
       </div>
