--- a/html/index.html
+++ b/html/index.html
@@ -141,26 +141,46 @@
   <div class="after_bg">
     </div>
 
-  <!-- Start work section -->
-    <div class="work_section" id="work">
+  <!-- Start showcase section -->
 
-    </div>
-
-    <div class="contact_section">
-      <div class="contact_section--header">Showcase</div>
-      <div class="section group">
-        <div class="col span_1_of_2">
-          <img src="img/appalachian.png" height="450px" width="600px" alt="">
-        </div>
-        <div class="col span_1_of_2">
-          <div class="appalachian_blurb">
-            Appalachian Counseling
+    <div class="showcase_section" id="showcase">
+      <div class="showcase_section--header">Showcase</div>
+      <div class="showcase_section--appalachian">
+        <div class="section group">
+          <div class="col span_5_of_12 appalachian_blurb">
+              <h1>Appalachian Counseling</h1>
+              <p>From the ground up, we constructed this therapist practice's site with the a comforting feeling in mind. Soft blues and browns, peaceful imagery, and calming fonts were all incorporated to achieve the client's vision.</p>
+          
+          </div>
+          <div class="col span_7_of_12 appalachian_image">
+            <img src="img/appalachian.png" alt="">
           </div>
         </div>
       </div>
     </div>
   </div>
   <!-- end main content section -->
+
+  <!-- Start footer -->
+  <footer>
+    <div class="col span_4_of_12">
+      <ul>
+        <li><a href="#home">home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#showcase">Showcase</a></li>
+      </ul>
+    </div>
+    <div class="col span_4_of_12">
+      <ul>
+        <li>asdfas</li>
+      </ul>
+    </div>
+    <div class="col span_4_of_12">
+      <ul>
+        <li>asd;ljkasd</li>
+      </ul>
+    </div>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
