added button and some sass

--- a/html/index.html
+++ b/html/index.html
@@ -49,10 +49,10 @@
             <a href="#about">About</a>
           </li>
           <li>
-            <a href="#work">Work</a>
+            <a href="#showcase">Showcase</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a href="#contact">Contact</a>
           </li>
         </ul>
       </nav>
@@ -152,22 +152,32 @@
               <p>From the ground up, we constructed this therapist practice's site with the a comforting feeling in mind. Soft blues and browns, peaceful imagery, and calming fonts were all incorporated to achieve the client's vision.</p>
           
           </div>
-          <div class="col span_7_of_12 appalachian_image">
-            <img src="img/appalachian.png" alt="">
+          <a target="_blank" href="http://www.appalachiancounseling.org">
+            <div class="col span_7_of_12 appalachian_image">
+              <img src="img/appalachian.png" alt="">
+          </a>
           </div>
+        </div>
+        <div class="centered" onclick="down_arrow5()">
+            <p class="landing_button">Contact</p>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="after_landing">
+      <div class="fade_black_grey_up"></div>
+    </div>
   <!-- end main content section -->
 
   <!-- Start footer -->
   <footer>
     <div class="col span_4_of_12">
       <ul>
-        <li><a href="#home">home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#showcase">Showcase</a></li>
+        <li onclick="down_arrow4()">Home</li>
+        <li onclick="down_arrow2()">About</li>
+        <li onclick="down_arrow3()">Showcase</li>
+        <li onclick="down_arrow3()">Contact</li>
       </ul>
     </div>
     <div class="col span_4_of_12">
