completed site for now

--- a/html/index.html
+++ b/html/index.html
@@ -171,8 +171,8 @@
   <!-- end main content section -->
 
   <!-- Start footer -->
-  <footer>
-    <div class="col span_4_of_12">
+  <div class="footer" id="contact">
+    <div class="col span_5_of_12 links non-mobile">
       <ul>
         <li onclick="down_arrow4()">Home</li>
         <li onclick="down_arrow2()">About</li>
@@ -180,18 +180,16 @@
         <li onclick="down_arrow3()">Contact</li>
       </ul>
     </div>
-    <div class="col span_4_of_12">
+    <div class="col span_7_of_12 contact-info">
       <ul>
-        <li>asdfas</li>
+        <li>Maxwell@whitehatwebdev.com</li>
+        <li>717-417-0927</li>
       </ul>
     </div>
-    <div class="col span_4_of_12">
-      <ul>
-        <li>asd;ljkasd</li>
-      </ul>
+    <div class="col span_12_of_12 copyright">
+    	&copy; 2018 White Hat Web Development
     </div>
-  </footer>
-
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
