--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>White Hat Web Development</title>
+  <title>White Hat Web Development | Sleek Modern Professional</title>
+  <link rel="icon" type="image/png" href="http://res.cloudinary.com/whitehatwebdev/image/upload/v1518909149/WhiteHatWebDev/favicon.png"><!-- Major Browsers -->
+  <!--[if IE]><link rel="SHORTCUT ICON" href="http://res.cloudinary.com/whitehatwebdev/image/upload/v1518909998/WhiteHatWebDev/favicon2.ico"/><![endif]--><!-- Internet Explorer-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -118,7 +120,7 @@
         <div class="about_section__row ">
           
             <div class="about_section__row--booke headSection">
-            <img src="img/booke_head.jpg"  alt="">
+            <img src="img/booke_cute.jpg"  alt="">
               
             <div class="about_section__row--booke-text_container">
                 <p class="about_section__row--booke-text_container-big_name">Rebeccah Zehall</p>
@@ -156,7 +158,7 @@
           </div>
           <a target="_blank" href="http://www.appalachiancounseling.org">
             <div class="col span_7_of_12 appalachian_image">
-              <img src="img/appalachian.png" alt="">
+              <img src="https://res.cloudinary.com/whitehatwebdev/image/upload/q_10/v1518909272/WhiteHatWebDev/appalachian.png" alt="">
           </a>
           </div>
         </div>
