added cloud hosting for images

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>White Hat Web Development | Sleek Modern Professional</title>
+  <meta name="description" content="White Hat Web Development offers professional web design, marketing, hosting, e-commerce sites, logo services, SEO, social media management, and more at a competitive price. Quality Website's are our passion. Currently located in Central PA, we work with clients in the Pennslyvania tri-state area and beyond.">
   <link rel="icon" type="image/png" href="http://res.cloudinary.com/whitehatwebdev/image/upload/v1518909149/WhiteHatWebDev/favicon.png"><!-- Major Browsers -->
   <!--[if IE]><link rel="SHORTCUT ICON" href="http://res.cloudinary.com/whitehatwebdev/image/upload/v1518909998/WhiteHatWebDev/favicon2.ico"/><![endif]--><!-- Internet Explorer-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,9 +22,8 @@
   <div class="bg" id="home">
     <div class="bg__video">
       <video class="bg-video__content" autoplay muted loop>
-        <source src="img/Busy-City.mp4" type="video/mp4">
-        <source src="img/Busy-City.webm" type="video/webm">
-        <img src="img/Busy-City.jpg" alt="" title="Your browser is not supported!">
+        <source src="https://res.cloudinary.com/whitehatwebdev/video/upload/q_50/v1518909303/WhiteHatWebDev/Busy-City.mp4" type="video/mp4">
+        <img src="https://res.cloudinary.com/whitehatwebdev/image/upload/q_auto:best/v1518909169/WhiteHatWebDev/Busy-City.jpg" alt="" title="Your browser is not supported!">
       </video>
     </div>
     <div class="container">
@@ -70,9 +70,8 @@
   <div class="main_content">
     <div class="landing_section" id="landing">
       <div class="landing_section--row">
-        <!-- <img src="img/Image_1.jpg" alt="" class="desktop landing_section--img"> -->
-        <img src="img/image_2.jpg" alt="" class="desktop landing_section--img">
-        <img src="img/image_1_top_half.jpg" alt="" class="mobile landing_section--img">
+        <img src="http://res.cloudinary.com/whitehatwebdev/image/upload/q_73/v1518909186/WhiteHatWebDev/image_2.jpg" alt="" class="desktop landing_section--img">
+        <img src="https://res.cloudinary.com/whitehatwebdev/image/upload/q_auto:low/v1518909180/WhiteHatWebDev/image_1_top_half.jpg" alt="" class="mobile landing_section--img">
         <div class="landing_section--row-middle_content">
           <h1>The time is now</h1>
           <ul>
@@ -81,14 +80,14 @@
             <li><i class="fa fa-plane"></i> Discover the possibilities <i class="fa fa-plane mirror"></i></li>
             <li><i class="fa fa-gift"></i> Create your dream website <i class="fa fa-gift mirror"></i></li>
           </ul>
-          <img class="small_hat" src="img/small-hat.png" alt="">
+          <img class="small_hat" src="http://res.cloudinary.com/whitehatwebdev/image/upload/v1518909183/WhiteHatWebDev/small-hat.png" alt="">
           <p class="small_center_text">White Hat Web Development</p>
           <div class="centered" onclick="down_arrow2()">
                 <p class="landing_button">Meet The Team</p>
           </div>
         </div>
-        <img src="img/image_2.jpg" alt="" class="desktop landing_section--img mirror">
-        <img src="img/image_1_bottom_half.jpg" alt="" class="mobile landing_section--img">
+        <img src="http://res.cloudinary.com/whitehatwebdev/image/upload/q_73/v1518909186/WhiteHatWebDev/image_2.jpg" alt="" class="desktop landing_section--img mirror">
+        <img src="http://res.cloudinary.com/whitehatwebdev/image/upload/q_auto:low/v1518909187/WhiteHatWebDev/image_1_bottom_half.jpg" alt="" class="mobile landing_section--img">
       </div>
     </div>
 
@@ -105,7 +104,7 @@
               </div>
         <!-- Start Max Section -->
           <div class="about_section__row--max headSection">
-                <img src="img/max_head.jpg" alt="">
+                <img src="http://res.cloudinary.com/whitehatwebdev/image/upload/q_auto:good/v1518909148/WhiteHatWebDev/max_head.jpg" alt="">
             <div class="about_section__row--max-text_container">
                 <p class="about_section__row--max-text_container-big_name">Maxwell Stephens</p>
                 <p class="about_section__row--max-text_container-big_name--sub">Lead Developer</p>
@@ -120,7 +119,7 @@
         <div class="about_section__row ">
           
             <div class="about_section__row--booke headSection">
-            <img src="img/booke_cute.jpg"  alt="">
+            <img src="http://res.cloudinary.com/whitehatwebdev/image/upload/v1518909144/WhiteHatWebDev/booke_cute.jpg"  alt="">
               
             <div class="about_section__row--booke-text_container">
                 <p class="about_section__row--booke-text_container-big_name">Rebeccah Zehall</p>
@@ -158,7 +157,7 @@
           </div>
           <a target="_blank" href="http://www.appalachiancounseling.org">
             <div class="col span_7_of_12 appalachian_image">
-              <img src="https://res.cloudinary.com/whitehatwebdev/image/upload/q_10/v1518909272/WhiteHatWebDev/appalachian.png" alt="">
+              <img src="https://res.cloudinary.com/whitehatwebdev/image/upload/q_auto:low/v1518909272/WhiteHatWebDev/appalachian.png" alt="">
           </a>
           </div>
         </div>
