--- a/html/index.html
+++ b/html/index.html
@@ -187,6 +187,7 @@
       <ul>
         <li>Maxwell@whitehatwebdev.com</li>
         <li>(802) 365-1995</li>
+        <li><a href="https://www.facebook.com/whitehatwebdev/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
       </ul>
     </div>
     <div class="col span_12_of_12 copyright">
