added new index page

--- a/html/index.html
+++ b/html/index.html
@@ -158,6 +158,8 @@
     <div class="showcase_section" id="showcase">
       <div class="showcase_section--header">Showcase</div>
       <div class="showcase_section--appalachian">
+
+      <!-- START COUNSELING SECTION -->
         <div class="section group">
           <div class="col span_5_of_12 appalachian_blurb">
               <h1>Appalachian Counseling</h1>
@@ -170,6 +172,23 @@
           </a>
           </div>
         </div>
+      <!-- END COUNSELING SECTION -->
+      
+      <!-- START COUNSELING SECTION -->
+        <div class="section group">
+          <div class="col span_5_of_12 appalachian_blurb">
+              <h1>Appalachian Counseling</h1>
+              <p>From the ground up, we constructed this therapist practice's site with the a comforting feeling in mind. Soft blues and browns, peaceful imagery, and calming fonts were all incorporated to achieve the client's vision.</p>
+          
+          </div>
+          <a target="_blank" href="https://www.appalachiancounseling.org">
+            <div class="col span_7_of_12 appalachian_image">
+              <img src="https://res.cloudinary.com/whitehatwebdev/image/upload/q_auto:low/v1518909272/WhiteHatWebDev/appalachian.png" alt="">
+          </a>
+          </div>
+        </div>
+      <!-- END COUNSELING SECTION -->
+
         <div class="centered" onclick="down_arrow5()">
             <p class="landing_button">Contact</p>
         </div>
